--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "subresource": "0.0.0"
   },
   "devDependencies": {
+    "handlebars": "^3.0.0",
     "mocha": "^2.1.0"
   },
   "keywords": [
